--- a/app/views/signups/index.html.erb
+++ b/app/views/signups/index.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
   <% @campers.each do |camper| %>
-    <li><%= link_to camper.name, camper_path(camper) %></li>
+    <li><%= camper.name %></li>
   <% end %>
 </ul>
